--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "memoize-one": "^6.0.0",
     "ol": "^7.4.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -15,7 +16,7 @@
   },
   "scripts": {
     "start": "react-scripts start --openssl-legacy-provider",
-    "predeploy":  "npm run build",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
